--- a/Assignments/Midterm Prep #6/style.css
+++ b/Assignments/Midterm Prep #6/style.css
@@ -4,6 +4,10 @@
 
 @import url("layout.css");
 
-@media (min-width:768px) {
+@media (max-width:768px) {
+
+	.logo {
+		width:140px; height:auto;
+	}
 
 }
