--- a/Assignments/Midterm Prep #6/typography.css
+++ b/Assignments/Midterm Prep #6/typography.css
@@ -1,8 +1,12 @@
+@font-face {
+  font-family: "Mukta-Regular";
 
-font-family: 'Mukta', sans-serif;
+  src: url("fonts/Mukta-Regular.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: normal;
+  font-style: normal;
+}
 
-
-body {
-	font-family: 'Rubik', sans-serif;
-	font-size:50px;
+li {
+	font-family: 'Mukta-Regular';
+	font-size: 25px;
 }
