--- a/Assignments/Midterm Prep #6/layout.css
+++ b/Assignments/Midterm Prep #6/layout.css
@@ -15,3 +15,19 @@ li {
 body {
 	background-color: #0c0d0d;
 }
+
+#ex1 {
+	width: 55%;
+	height: 50%;
+	margin-left: 6.5%;
+
+}
+
+#ex2 {
+	width: 55%;
+	height: 50%;
+	margin-right: 6.5%;
+
+}
+
+}
