--- a/Assignments/Midterm Prep #6/style.css
+++ b/Assignments/Midterm Prep #6/style.css
@@ -7,7 +7,8 @@
 @media (max-width:768px) {
 
 .logo {
-		width:180px; height:auto;
+		width:180px; 
+		height:auto;
 	}
 
 li {
@@ -19,7 +20,16 @@ nav {
 	background-color: #e8e8e8;
 	display: inline-block;
 	width:100%;
+	overflow: auto;
 }
+
+#ex1 {
+	width: 70%;
+	height: 50%;
+	margin-left: none;
+
+}
+
 
 
 }
