--- a/Assignments/Midterm Prep #6/style.css
+++ b/Assignments/Midterm Prep #6/style.css
@@ -23,11 +23,14 @@ nav {
 	overflow: auto;
 }
 
-#ex1 {
+.example {
 	width: 70%;
 	height: 50%;
-	margin-left: none;
+	margin-left: 0%
+}
 
+.img-holder {
+	display:inline;
 }
 
 
