--- a/Assignments/Midterm Prep #6/typography.css
+++ b/Assignments/Midterm Prep #6/typography.css
@@ -1,4 +1,12 @@
 @font-face {
+  font-family: "Rubik-Medium";
+
+  src: url("fonts/Rubik-Medium.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "Mukta-Regular";
 
   src: url("fonts/Mukta-Regular.woff2") format("woff2"); /* Modern Browsers */
@@ -6,7 +14,24 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Rubik-Bold";
+
+  src: url("fonts/Rubik-Bold.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: normal;
+  font-style: normal;
+}
+
 li {
-	font-family: 'Mukta-Regular';
+	font-family: 'Rubik-Medium';
 	font-size: 25px;
+}
+
+figcaption {
+	font-family: 'Rubik-Bold';
+	font-size: 20px;
+}
+
+a {
+
 }
