--- a/Assignments/Midterm Prep #6/style.css
+++ b/Assignments/Midterm Prep #6/style.css
@@ -6,6 +6,8 @@
 
 @media (max-width:768px) {
 
+/* Home Page CSS Mobile */
+
 .logo {
 		width:180px; 
 		height:auto;
@@ -45,5 +47,51 @@ figcaption {
 
 }
 
+/* Home Page CSS Mobile */
+
+/* About Page CSS Mobile */
+
+#portraitmobile {
+	width: 75%;
+	margin-right: auto;
+	margin-left: auto;
+
+}
+
+#portraitresize {
+	width: 100%;
+}
+
+#aboutheader {
+	font-family: 'Rubik-Bold';
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	color: #e8e8e8;
+	font-size: 230%;
+
+}
+
+#bodycopy {
+	background-color: #e8e8e8;
+	font-family: 'Mukla-Light';
+	width:60%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	padding-left:15%;
+	padding-right: 15%;
+	padding-bottom: 5%;
+	padding-top: 5%;
+}
+
+/* About Page CSS Mobile */
+
+/* Blog Page CSS Mobile */
+
+
+
+
+/* Blog Page CSS Mobile */
 
 }
