--- a/Assignments/Midterm Prep #6/typography.css
+++ b/Assignments/Midterm Prep #6/typography.css
@@ -43,6 +43,7 @@ figcaption {
 }
 
 #bodycopy {
+	column-count: 2;
 	background-color: #e8e8e8;
 	font-family: 'Mukla-Light';
 	width:60%;
@@ -55,6 +56,18 @@ figcaption {
 	padding-bottom: 1.5%;
 }
 
-a {
 
+
+
+
+a:link {
+    text-decoration: none;
+}
+
+a:active {
+    color: #595959;
+}
+
+a:visited {
+    color: #757575;
 }
