Assignment 11 Revised & Assignment 12 Prep

--- a/Assignments/Assignment #11/style.css
+++ b/Assignments/Assignment #11/style.css
@@ -1,8 +1,9 @@
 header {
-	font-size: 28px;
+	font-size: 48px;
 	font-weight: bold;
 	text-align: center;
 	background-color: #A083B0;
+	padding: 3%
 }
 
 
