--- a/Assignments/Assignment #12 (Final Submission)/stylesheet.css
+++ b/Assignments/Assignment #12 (Final Submission)/stylesheet.css
@@ -195,6 +195,7 @@ iframe {
 }
 
 .aboutcontent {
+  font-family: 'Open Sans', sans-serif;
   background-color: #010133;
   color: #FFFFFF;
   padding: 2%;
@@ -221,7 +222,69 @@ iframe {
 
 
 
+/* Donations Page Desktop CSS */
 
+.donationsinfo {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 22px;
+}
+
+
+#donatetobutton {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  border-radius: 8px;
+  background-color: #ffd500;
+  font-size:16px;
+  padding: 2%;
+  margin-left:46%;
+  text-align: center;
+}
+
+#donationform {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  font-size:16px;
+  padding: 2%;
+  background-color: #DCDCDC;
+
+}
+
+#donationmessage {
+  background-color: #009900;
+  color: white;
+  padding: 5%;
+}
+
+
+/* Donations Page Desktop CSS */
+
+
+/* Blog Page Desktop CSS */
+
+.gridevents{
+  width:35%;
+  margin-left: 30%;
+  padding: 2%
+
+}
+
+#togglegrid{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  border-radius: 8px;
+  background-color: #0000ba
+  color:white;
+  font-size:16px;
+  padding: 2%;
+  margin-left: 38%;
+  margin-top: 1%;
+
+}
+
+/* Blog Page Desktop CSS */
 
 
 
@@ -475,6 +538,7 @@ iframe {
 }
 
 .aboutcontent {
+  font-family: 'Open Sans', sans-serif;
   background-color: #010133;
   color: #FFFFFF;
   padding: 5%;
@@ -495,6 +559,74 @@ iframe {
 }
 
 /* About Page Mobile CSS */
+
+
+
+/* Donations Page Mobile CSS */
+
+.donationsinfo {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 18px;
+}
+
+#donatetobutton {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  border-radius: 8px;
+  background-color: #ffd500;
+  font-size:16px;
+  padding: 3%;
+  margin-left: 35%;
+}
+
+#donationform {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  font-size:16px;
+  padding: 5%;
+  background-color: #DCDCDC;
+
+}
+
+#donationmessage {
+  background-color: #009900;
+  color: white;
+  padding: 25%;
+}
+
+
+/* Donations Page Mobile CSS */
+
+
+/* Blog Page Mobile CSS */
+
+.gridevents{
+  width: 100%;
+  margin-left: 20%;
+  padding: 2%;
+  display: inline-block;
+
+}
+
+#togglegrid{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  border-radius: 8px;
+  background-color: #0000ba
+  color:white;
+  font-size:16px;
+  padding: 3%;
+  margin-left: 35%;
+
+}
+
+
+
+
+/* Blog Page Mobile CSS */
+
 
 
 
